--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 .img {
   height: 300px;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .h1,
@@ -14,6 +16,30 @@ h1 {
 
 p {
   margin-top: 0;
+  margin-left: 20px;
+  margin-right: 20px;
   margin-bottom: 1rem;
   font-size: 20px;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+button.btn.btn-primary {
+  position: absolute;
+  margin-left: 20px;
+}
+
+.card-body {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1.25rem;
+  color: green;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 1.25rem;
+  margin-left: 20px;
 }
